# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.502 2005/11/28 01:42:22 agaffney Exp $

*GLI-0.3 (27 Oct 2005)

  27 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  fix map() issue with grub code
  replace kernel_names and initrd_names loops with one-liners

  27 Nov 2005; Preston Cody <codeman@gentoo.org>
  gli-dialog won't let you dynamic stage3 without systempkgs.txt.
  initial gli-dialog support for recommended partitioning layout and clear.
  failure cleanup now an option for gli-dialog.

  26 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  fix to stage1() debug code
  fix to stage2() debug code

  26 Nov 2005; Preston Cody <codeman@gentoo.org>
  some more bootloader code fixes.  forgot boot_device != mbr_device.

  25 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  fix to unallocated space merging when last one is after part 4
  
  24 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  small fix to debugging code in copy_pkg_to_chroot()

  23 Nov 2005; Preston Cody <codeman@gentoo.org>
  more bugfixes with bootloader code
  gli-dialog side appears to work
	
  21 Nov 2005; Preston Cody <codeman@gentoo.org>
  initial adding of boot_device to backend.
  initial boot_device support added to gli-dialog.
  some fixes of my poor coding
	
  20 Nov 2005; Preston Cody <codeman@gentoo.org>
  converted gli-dialog to use the install_package_list.
  gtkfe has already been converted by AllanonJL
  new way working in gli-dialog now and added to webgli.
  added set/get_boot_device() to IP
  
  19 Nov 2005; Preston Cody <codeman@gentoo.org>
  get_install_package_list added to InstallProfile.  This can be used by the FEs

  17 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py: