@@ -5,35 +5,41 @@ If you are working or plan to work on a task here put your name by it.
 
 Things still needing to be done for the BETA release:
 	Backend:
-		don't rewrite the same config value twice for no reason
+		Move Bootloader/arch list to IP
 		
-		GLIArchitectureTemplate.build_kernel():
-			- test with 2.4 kernels
-			- Check custom config for correct initrd support when using genkernel
-			- might need to pass --udev/--evms2/--lvm2/--dmraid to genkernel.
-			
 		In Progress:
-		secondary progress bar and X of Y for emerge notifications - works for install_packages. not for emerge system.
 		partitioning error checking.
-		add distcc support
+		???add distcc support (UNTESTED)
 		add r_pppoe configuration stuff.
 		network mounts into the fstab
-		
 	gli-dialog: 
-		distcc support
+		turn OFF dynamic stage3 if not chosen second time
 	gtkFE:
 		listed in fe/gtk/TODO
+		add grsec/hardened sources with desc.
+		add Other sources option (textbox).
+		NON-GENKERNEL support. i.e. config URI  see webgli.
+	webgli:
+		Restrict portage snapshot if doing dynamic stage3
+		default the snapshot uri to the cdrom one.
 
 Things to put into a later version:
 	
 Future feature requests:
 	
 	add auto-update script to crontab once every week.
-	if you chose to emerge X, have it configured and set to start on bootup
+
 	god help us if we have to get your printer set up too!
 	
+Robbat's thing:
+	GLIArchitectureTemplate.build_kernel():
+		- test with 2.4 kernels
+		- Check custom config for correct initrd support when using genkernel
+		- might need to pass --evms2/--lvm2/--dmraid to genkernel.
+
 
 Done:
+if you chose to emerge X, have it configured and set to start on bootup (codeman)
 lilo fixup (codeman)
 Add custom kernel code. (codeman)
 Fix bootloader code for udev. (codeman)
