@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.502 2005/11/28 01:42:22 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.503 2005/11/28 04:41:57 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -14,6 +14,8 @@
   gli-dialog won't let you dynamic stage3 without systempkgs.txt.
   initial gli-dialog support for recommended partitioning layout and clear.
   failure cleanup now an option for gli-dialog.
+  move livecd-kernel to top of kernel lists.  fix proto bug in rc.conf
+  added comparison list and updated TODO!
 
   26 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
